# stripe-standard-api-boilerplate

./: README.md  app.db  pyproject.toml
app/: main.py
app/database/: config.py
app/models/: models.py
app/routes/: transactions.py  users.py
app/schemas/: schemas.py
app/utils/: pagination.py
